Added Authentication
Tasks Done:

1. Added User Login and Signup functionality.
2. Made the APIs protected.
3. Added Interfaces.
